--- a/index.html
+++ b/index.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Frontend Mentor | Intro component with sign up form</title>
+  </head>
+  <body>
+    <main>
+      <section aria-label="header" class="header">
+        <h1 class="header-main">Learn to code by watching others</h1>
+        <p class="header-sub">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how develoeprs think is
+          invaluable.
+        </h2>
+      </section>
+      <div class="form">
+        <div class="form-header">
+          <strong>Try it free 7 days</strong> then $20/mo. thereafter
+        </div>
+        <form class="form-main" id="registration">
+          <div class="form-element">
+            <img src="./images/icon-error.svg" class="error-icon" alt="Error" />
+            <input type="text" placeholder="First Name" name="firstName" />
+            <em class="error-message">First Name cannot be empty</em>
+          </div>
+          <div class="form-element">
+            <img src="./images/icon-error.svg" class="error-icon" alt="Error" />
+            <input type="text" placeholder="Last Name" name="lastName" />
+            <em class="error-message">Last Name cannot be empty</em>
+          </div>
+          <div class="form-element">
+            <img src="./images/icon-error.svg" class="error-icon" alt="Error" />
+            <input type="text" placeholder="Email Address" name="email" />
+            <em class="email-error error-message"></em>
+          </div>
+          <div class="form-element">
+            <img src="./images/icon-error.svg" class="error-icon" alt="Error" />
+            <input type="password" placeholder="Password" name="password" />
+            <em class="error-message">Password cannot be empty</em>
+          </div>
+          <button type="submit" class="form-button">Claim your free trial</button>
+          <p class="form-terms">
+            By clicking the button, you are agreeing to our
+            <span class="form-terms__link">Terms and Services</span>
+          </p>
+        </form>
+      </section>
+    </main>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
