--- a/index.html
+++ b/index.html
@@ -28,28 +28,64 @@
         </div>
         <form class="form-main" id="registration">
           <div class="form-element">
-            <input type="text" placeholder="First Name" name="firstName" id="firstName" aria-label="First Name" />
-            <em class="error-message" aria-describedby="firstName" role="alert">First Name cannot be empty</em>
+            <input
+              type="text"
+              placeholder="First Name"
+              name="firstName"
+              id="firstName"
+              aria-label="First Name"
+            />
+            <em class="error-message" aria-describedby="firstName" role="alert"
+              >First Name cannot be empty</em
+            >
           </div>
           <div class="form-element">
-            <input type="text" placeholder="Last Name" name="lastName" id="lastName" aria-label="Last Name" />
-            <em class="error-message" aria-describedby="lastName" role="alert">Last Name cannot be empty</em>
+            <input
+              type="text"
+              placeholder="Last Name"
+              name="lastName"
+              id="lastName"
+              aria-label="Last Name"
+            />
+            <em class="error-message" aria-describedby="lastName" role="alert"
+              >Last Name cannot be empty</em
+            >
           </div>
           <div class="form-element">
-            <input type="text" placeholder="Email Address" name="email" id="email" aria-label="Email Address" />
-            <em class="email-error error-message" aria-describedby="email" role="alert"></em>
+            <input
+              type="text"
+              placeholder="Email Address"
+              name="email"
+              id="email"
+              aria-label="Email Address"
+            />
+            <em
+              class="email-error error-message"
+              aria-describedby="email"
+              role="alert"
+            ></em>
           </div>
           <div class="form-element">
-            <input type="password" placeholder="Password" name="password" id="password" aria-label="Password" />
-            <em class="error-message" aria-describedby="password" role="alert">Password cannot be empty</em>
+            <input
+              type="password"
+              placeholder="Password"
+              name="password"
+              id="password"
+              aria-label="Password"
+            />
+            <em class="error-message" aria-describedby="password" role="alert"
+              >Password cannot be empty</em
+            >
           </div>
-          <button type="submit" class="form-button">Claim your free trial</button>
+          <button type="submit" class="form-button">
+            Claim your free trial
+          </button>
           <p class="form-terms">
             By clicking the button, you are agreeing to our
             <span class="form-terms__link">Terms and Services</span>
           </p>
         </form>
-      </section>
+      </div>
     </main>
     <script src="./js/main.js"></script>
   </body>
